analysis/symbol-light-classes/testData/lightClassByFqName/compilationErrors/JvmOverloadsActualConstructorWithInheritedDefaults.java
public final class Foo /* common.pack.Foo*/ {
  @kotlin.jvm.JvmOverloads()
  public  Foo();//  .ctor()

  @kotlin.jvm.JvmOverloads()
  public  Foo(int);//  .ctor(int)

  @kotlin.jvm.JvmOverloads()
  public  Foo(int, int);//  .ctor(int, int)

  @kotlin.jvm.JvmOverloads()
  public  Foo(int, int, int);//  .ctor(int, int, int)
}
